Rename InfoWindow, split into separate files and modernize it
This class is a controller and should be named as such. The
InfoWindowManager is separated into its own files. Also turns
the ivars into properties.

--- a/Interfaces/Base.lproj/InfoWindow.xib
+++ b/Interfaces/Base.lproj/InfoWindow.xib
@@ -6,7 +6,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="InfoWindow">
+        <customObject id="-2" userLabel="File's Owner" customClass="InfoPanelController">
             <connections>
                 <outlet property="folderDescription" destination="81" id="82"/>
                 <outlet property="folderImage" destination="35" id="42"/>
